# esp-msc

./: .gitignore  README.md  sdkconfig.example
components/espressif__esp_tinyusb/: tusb_msc_storage.c
components/espressif__esp_tinyusb/include/: tusb_msc_storage.h
main/: CMakeLists.txt  EPD_1in54_V2.c  EPD_1in54_V2.h  Kconfig.projbuild  epaper.c  epaper.h  epaper_spi.c  epaper_spi.h  epaper_ws.c  epaper_ws.h  epd.c  error_image.h  idf_component.yml  main.c  main.h  msc.c  msc.h  sdcard.c  sdcard.h  shell.c  shell.h  tusb_msc_main.c
